--- a/items/additems.html
+++ b/items/additems.html
@@ -1,1 +1,10 @@
-contents of the add items
+<!DOCTYPE html>
+<html lang="en">
+<head>
+      <title>Add items</title>
+</head>
+<body>
+    <marquee> welcome to the add items page</marquee>marquee
+    
+</body>
+</html>
