--- a/items/updateitems.html
+++ b/items/updateitems.html
@@ -1,1 +1,13 @@
-contents of the update items
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width= , initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    update chesko bigilu items ni
+</body>
+</html>
+
+
