--- a/restaurants/add.html
+++ b/restaurants/add.html
@@ -1,1 +1,11 @@
-add the list of restaurants
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    select the top restaurants that you like
+</body>
+</html>
