--- a/restaurants/delete.html
+++ b/restaurants/delete.html
@@ -1,1 +1,11 @@
-delete the list of restaurants
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    nachani restaurants ni teesi padai bigilu
+</body>
+</html>
