--- a/restaurants/update.html
+++ b/restaurants/update.html
@@ -1,1 +1,12 @@
-update the list of restaurants
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    update avvu ra ayya
+    
+</body>
+</html>
