--- a/items/additems.html
+++ b/items/additems.html
@@ -4,7 +4,7 @@
       <title>Add items</title>
 </head>
 <body>
-    <marquee> welcome to the add items page</marquee>marquee
+    <marquee> welcome to the add items page ,idhi rendo saari update chestunnam bayya</marquee>marquee
     
 </body>
 </html>
