--- a/items/additems.html
+++ b/items/additems.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <marquee> welcome to the add items page ,idhi rendo saari update chestunnam bayya</marquee>marquee
+      csklkdfhjbdojvsiuerghwpojo
     
 </body>
 </html>
