--- a/items/additems.html
+++ b/items/additems.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <marquee> welcome to the add items page ,idhi rendo saari update chestunnam bayya</marquee>marquee
-      csklkdfhjbdojvsiuerghwpojo
+      end of the github session bro
     
 </body>
 </html>
